# Battleship-game

./: README.md  only_pygame.py  pyproject.toml  requirements.txt  set_ships.py  trying_pygame.py
src/: DraggableShip.py  Fireworks.py  Game.py  GenericButton.py  Ship.py  Shoot.py  Tile.py  constants.py  game_stage.py  main.py  main.spec  parse_path.py  set_ships.py
